--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Diccionario de la LSC",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "Cultura",
@@ -12,5 +13,20 @@
     "Idioma"
   ],
   "author": "@Virginia.Creativa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
+    "concurrently": "^5.0.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.7.7",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "path": "^0.12.7"
+  }
 }
