--- a/package.json
+++ b/package.json
@@ -15,18 +15,29 @@
   "author": "@Virginia.Creativa",
   "license": "ISC",
   "dependencies": {
+    "airbnb": "0.0.2",
+    "babel-eslint": "^10.0.3",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "concurrently": "^5.0.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prettier": "^1.18.2",
+    "prettier-standard": "^15.0.1"
   }
 }
