--- a/.eslintrc
+++ b/.eslintrc
@@ -105,7 +105,8 @@
     "jsx-a11y/label-has-associated-control": 0,
     "jsx-a11y/label-has-for": 0,
     "import/no-named-as-default-member": 0,
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "node/no-missing-require": 0,
   },
   "plugins": ["prettier"]
 }
