--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -6,6 +6,7 @@
     "prettier/standard",
     "plugin:prettier/recommended"
   ],
+  "plugins": ["html", "jest", "prettier", "react-hooks"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -16,7 +17,7 @@
   },
   "root": true,
   "env": {
-    "es6": true,
+    "es6": true, 
     "jest": true,
     "browser": true,
     "node": true,
@@ -131,7 +132,6 @@
     "jsx-a11y/label-has-for": 0,
     "react/no-did-update-set-state": 0,
     "react/state-in-constructor": 0,
-    "import/no-named-as-default-member": 0,
-  },
-  "plugins": ["html", "jest", "react", "prettier", "react-hooks"]
+    "import/no-named-as-default-member": 0
+  }
 }
