--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "3.0.1",
+    "file-loader": "^3.0.1",
     "fs-extra": "7.0.1",
     "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -63,6 +63,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
