--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
     "bootstrap": "^4.3.1",
+    "boxicons": "^2.0.4",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "connected-react-router": "^6.5.2",
@@ -72,6 +73,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^4.4.1",
     "stylelint": "^11.1.1",
     "stylelint-config-css-modules": "^1.5.0",
     "stylelint-config-prettier": "^6.0.0",
