--- a/client/.stylelintrc
+++ b/client/.stylelintrc
@@ -1,6 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
+  "extends": ["stylelint-config-recommended", "stylelint-config-standard",
     "stylelint-config-css-modules",
     "stylelint-config-rational-order",
     "stylelint-config-prettier"
