--- a/client/package.json
+++ b/client/package.json
@@ -75,11 +75,13 @@
     "style-loader": "1.0.0",
     "styled-components": "^4.4.1",
     "stylelint": "^11.1.1",
-    "stylelint-config-css-modules": "^1.5.0",
+    "stylelint-config-css-modules": "^2.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "stylelint-scss": "^3.12.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.12.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typescript": "^3.6.4",
