--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -132,6 +132,7 @@
     "jsx-a11y/label-has-for": 0,
     "react/no-did-update-set-state": 0,
     "react/state-in-constructor": 0,
-    "import/no-named-as-default-member": 0
+    "import/no-named-as-default-member": 0,
+    "react/jsx-props-no-spreading": 0
   }
 }
