--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-skylight": "^0.5.1",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
