--- a/client/package.json
+++ b/client/package.json
@@ -82,7 +82,9 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^3.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
     "stylelint-scss": "^3.12.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
