--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.0.2",
     "bootstrap": "^4.3.1",
     "boxicons": "^2.0.4",
@@ -77,6 +78,7 @@
     "style-loader": "1.0.0",
     "styled-components": "^4.4.1",
     "stylelint": "^11.1.1",
+    "stylelint-config-concentric-order": "^3.5.0",
     "stylelint-config-css-modules": "^2.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-rational-order": "^0.1.2",
