--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,8 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.18.2",
     "react": "^16.11.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-animation": "^1.2.2",
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
