--- a/client/.stylelintrc
+++ b/client/.stylelintrc
@@ -16,6 +16,7 @@
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-empty-line-before": null
+    "at-rule-empty-line-before": null,
+    "no-descending-specificity": null,
   }
 }
